# ancient-kingdoms-mods

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  AncientKingdomsMods.sln  CLAUDE.md  Directory.Build.props  Drops.cs  IMPLEMENTATION_PLAN.md  Local.props.example  README.md  config.toml.example  knip.config.ts  lefthook.yml  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redactions.toml
build-pipeline/: .gitignore  .lintstagedrc.json  CLAUDE.md  pyproject.toml  schema.sql
build-pipeline/src/compendium/: __init__.py  cli.py  config.py  constants.py  db.py  models.py  redaction.py
build-pipeline/src/compendium/commands/: __init__.py  build.py  stats.py  tiles.py  visual_audit.py
build-pipeline/src/compendium/denormalizers/: __init__.py  exclusions.py
build-pipeline/src/compendium/denormalizers/altars/: __init__.py
build-pipeline/src/compendium/denormalizers/experience/: __init__.py  calculations.py
build-pipeline/src/compendium/denormalizers/items/: __init__.py  calculations.py  crafting_source_level.py  equipment.py  source_entries.py  sources.py  (+4 more)
build-pipeline/src/compendium/loaders/: __init__.py  core.py
build-pipeline/src/compendium/types/: __init__.py  denormalized.py
build-pipeline/src/compendium/utils/: __init__.py  paths.py
build-pipeline/src/compendium/visual_audit/: __init__.py  asset_index.py  hotrepl.py  models.py  report.py  selection.py
build-pipeline/tests/: test_cli.py  test_fish_loader.py  test_gather_items_loader.py  test_houses_loader.py  test_item_cosmetic_fields.py  test_item_source_entries.py  test_item_stat_formulas.py  test_pets_loader.py  test_tiles_validation.py  test_visual_assets_loader.py  test_visual_audit_asset_index.py  test_visual_audit_commands.py  test_visual_audit_hotrepl.py  test_visual_audit_report.py  test_visual_audit_selection.py  test_website_monster_image_contracts.py
(+1218 files in other folders)
