[project]
name = "ancient-kingdoms-compendium"
version = "0.1.0"
description = "Build pipeline for Ancient Kingdoms Compendium"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.27.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pillow>=12.3.0",
]

[project.scripts]
compendium = "compendium.cli:app"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "vulture>=2.16",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.vulture]
min_confidence = 80
paths = ["src/"]
# Pydantic model field annotations are accessed dynamically; exclude them.
ignore_decorators = ["validator", "field_validator", "model_validator"]
